--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,11 @@ set(CMAKE_C_STANDARD 99)
 list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)
 find_package (OTF2 REQUIRED)
 
-add_executable(ezprofile main.c)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -I${OTF2_INCLUDE_PATH}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I${OTF2_INCLUDE_PATH}")
+set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -L${OTF2_LIBRARY_PATH} -lotf2")
+
+add_executable(ezprofile
+        src/main.c
+        )
+target_link_libraries(ezprofile otf2)
